[package]
name = "appname"
description = "simple hello world app"
version = "0.1.0"
authors = ["iddar <iddar@dbug.mx>"]
edition = "2018"
repository = "https://github.com/iddar/rust-docker-boilerplate"
readme = "README.md"
license = "MIT"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false

[dependencies]
